[metadata]
name = edamame
version = 0.1.0-dev
description = Web Traffic Prediction
url = https://github.com/dsp-uga/Edamame
maintainer = 'I-Huei Ho, Weiwen Xu'
maintainer_email = 'ihuei.ho25@uga.edu, wx37523@uga.edu'
license = MIT
packages = LSTM, ARIMA

[options]
setup_requires = pytest-runner
tests_require = pytest

[aliases]
test = pytest
